<resources>
    <string name="app_name">TripMemories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignIn">SignIn</string>
    <string name="SignUp">SignUp</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="image_contentDescription">image</string>

    <string name="let_s_get_started_text">Let\'s Get started</string>

    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>

    <string name="sign_in">SIGN IN</string>

    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="trip_title">Title</string>

    <string name="password">Password</string>

    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="please_wait">Please Wait…</string>

    <string name="nav_my_profile">My Profile</string>

    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>

    <string name="add_trip">Add Trip</string>

    <string name="my_profile">My Profile</string>
    <string name="task_list">Task List</string>

    <string name="create_board_title">Create Board</string>

    <string name="create">CREATE</string>

    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>

    <string name="hint_list_name">List Name</string>

    <string name="action_add_card">Add Card</string>

    <string name="hint_card_name">Card Name</string>

    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>

    <string name="cancel">CANCEL</string>

    <string name="add">ADD</string>

    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>

    <string name="select_color">Select Color</string>

    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>

    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>

    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>

    <string name="yes">Yes</string>

    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
    <string name="title_home">Home</string>
    <string name="title_Logout">Log Out</string>
    <string name="title_Settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_source">SourceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">LogOut</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="trip_desc">Description</string>
    <string name="trip_date">Date</string>
    <string name="trip_add_people">Add People</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_emailId_hint">Email Id</string>

</resources>