<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragment.AddTripFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                    android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                    android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                    android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                    android:backgroundTint="@color/secondary_color"
                    android:elevation="@dimen/card_view_elevation"
                    app:cardCornerRadius="@dimen/card_view_corner_radius">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/my_profile_screen_content_padding">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgTripPhotos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:scaleType="center"
                            android:src="@drawable/ic_launcher_background" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                            android:hint="@string/trip_title"
                            app:counterEnabled="true"
                            app:counterMaxLength="20"
                            app:endIconMode="clear_text"
                            app:helperText="Required*"
                            app:helperTextTextColor="@color/red"
                            app:startIconDrawable="@drawable/ic_baseline_edit_24">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtTripTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="20"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                            android:hint="@string/trip_desc"
                            app:counterEnabled="true"
                            app:counterMaxLength="150"
                            app:endIconMode="clear_text"
                            app:helperText="Required*"
                            app:helperTextTextColor="@color/red"
                            app:startIconDrawable="@drawable/ic_baseline_description_24">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtTripDesc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="150"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txtDateInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                            android:hint="@string/trip_date"
                            app:endIconDrawable="@drawable/ic_baseline_date_range_24"
                            app:endIconMode="custom"
                            app:helperText="Required*"
                            app:helperTextTextColor="@color/red">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtTripDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                            android:hint="@string/trip_add_people"
                            app:endIconMode="clear_text"
                            app:helperText="Required*"
                            app:helperTextTextColor="@color/red"
                            app:startIconDrawable="@drawable/ic_baseline_person_add_24">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtAddPeople"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/et_text_size" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnAddTrip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                            android:layout_marginBottom="@dimen/my_profile_btn_update_marginTop"
                            android:background="@drawable/btn_add_trip_bkgnd"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:paddingTop="@dimen/btn_paddingTopBottom"
                            android:paddingBottom="@dimen/btn_paddingTopBottom"
                            android:text="@string/add_trip"
                            android:textColor="@color/secondary_color"
                            android:textSize="@dimen/btn_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>